--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.8.1"
+    "@astrojs/solid-js": "^5.1.0",
+    "@deno/astro-adapter": "^0.3.1",
+    "astro": "^5.8.1",
+    "sharp": "^0.34.2"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.89.1"
   }
 }
